--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,3 +27,13 @@ body {
     text-wrap: balance;
   }
 }
+
+/* Hide input number arrows */
+input[type="number"]::-webkit-inner-spin-button, 
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+input[type="number"] {
+    -moz-appearance: textfield;
+}
